[tool.poetry]
name = "indigo"
version = "0.1.0"
description = ""
authors = ["Kyle Marden <kyle.marden@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fire = "^0.7.0"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"
pydantic = "^2.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.3"
loguru = "^0.7.3"
icecream = "^2.1.3"
faker = "^33.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
